--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
+    "expressGeneratorStart": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
