--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "expressGeneratorStart": "node ./bin/www",
+    "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
