--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   },
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "start": "node app.js",
+    "devstart": "nodemon app.js"
   },
   "dependencies": {
     "async": "^2.6.2",
